[gd_scene load_steps=4 format=3 uid="uid://dtn4mn2vvmax7"]

[ext_resource type="Script" uid="uid://chl1gv6a222pd" path="res://Windows/FreeJob/free_job_window.gd" id="1_2gifj"]

[sub_resource type="Gradient" id="Gradient_2gifj"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qq0dd"]
gradient = SubResource("Gradient_2gifj")

[node name="FreejobWindow" type="Window"]
oversampling_override = 1.0
title = "FreeJob: Free to Job from Anywhere"
position = Vector2i(7, 31)
size = Vector2i(800, 600)

[node name="FreeJobWindow" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_qq0dd")
script = ExtResource("1_2gifj")

[node name="VBoxContainer" type="VBoxContainer" parent="FreeJobWindow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -61.5
offset_right = 116.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="FreeJobWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.12750968, 0.41426706, 0.567376, 1)
theme_override_font_sizes/font_size = 64
text = "FreeJob"
horizontal_alignment = 1

[node name="FindWork" type="Button" parent="FreeJobWindow/VBoxContainer"]
layout_mode = 2
text = "Find Me a Job!"

[node name="Pop-Up" type="ColorRect" parent="FreeJobWindow"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2784314, 0.2784314, 0.2784314, 0.9019608)

[node name="VBoxContainer" type="VBoxContainer" parent="FreeJobWindow/Pop-Up"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="FreeJobWindow/Pop-Up/VBoxContainer"]
layout_mode = 2
text = "JOB DISCOVERED!"
horizontal_alignment = 1

[node name="JobDescription" type="RichTextLabel" parent="FreeJobWindow/Pop-Up/VBoxContainer"]
layout_mode = 2
text = "Job Description:"
fit_content = true

[node name="LineEdit" type="LineEdit" parent="FreeJobWindow/Pop-Up/VBoxContainer"]
layout_mode = 2
placeholder_text = "Paste your work here..."
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="FreeJobWindow/Pop-Up/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Submit" type="Button" parent="FreeJobWindow/Pop-Up/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit Work"

[node name="Cancel" type="Button" parent="FreeJobWindow/Pop-Up/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="FinishedPop-Up" type="ColorRect" parent="FreeJobWindow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2784314, 0.2784314, 0.2784314, 0.9019608)

[node name="VBoxContainer" type="VBoxContainer" parent="FreeJobWindow/FinishedPop-Up"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="FreeJobWindow/FinishedPop-Up/VBoxContainer"]
layout_mode = 2
text = "Work Complete!
You Earned $"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="close_requested" from="." to="FreeJobWindow" method="_on_freejob_window_close_requested"]
[connection signal="pressed" from="FreeJobWindow/VBoxContainer/FindWork" to="FreeJobWindow" method="_on_find_work_pressed"]
[connection signal="editing_toggled" from="FreeJobWindow/Pop-Up/VBoxContainer/LineEdit" to="FreeJobWindow" method="_on_line_edit_editing_toggled"]
[connection signal="pressed" from="FreeJobWindow/Pop-Up/VBoxContainer/HBoxContainer/Submit" to="FreeJobWindow" method="_on_submit_pressed"]
